mainsite/static/ogf/css/_tiles.scss
/* ... */
.story, .tile-textbelow {
  .story-wrap {

    .pub-date {
      color:            $col-red;
      display:          block;
      text-transform:   uppercase;
      font-size:        12px;
      font-weight:      700;
      letter-spacing:   1px;
    }
    h3 {
      color:            $col-ogfblack;
      font-weight:      700;
      line-height:      1.1;
      margin-bottom:    8px;
      margin-top:       0;
      letter-spacing:   -0.02em;
    }
    p {
      color:            $col-copygrey;
    }
  }
}
.poi-date {
  color:            $col-red;
  display:          block;
  text-transform:   uppercase;
  font-size:        10px !important;
  font-weight:      700;
  letter-spacing:   1px;
}
.featured-story {
  padding:              0;
  min-height:           360px;

  .story-wrap {
    //height:             400px;
    color:              $col-white;
    background-size:    cover;
    position:           relative;

    .story-text {
      padding:          15px;
      background:       $img-back-black-50 repeat top left fixed;
      background-size:  100%;
      position:         absolute;
      bottom:           0;
      width:            100%;

      h2 {
        font-weight:    600;
      }
    }
  }
}

.story-text {
      //height:           175px;
      overflow:         hidden;
}
.whitefadebottom {
  background:           $img-whitefade repeat-x bottom left;
  height:               20px;
  width:                100%;
  position:             absolute;
  bottom:               19px;
  //border:               1px solid hotpink;
}
.sideListBoxTitle {
  font-weight:          $font-bold;
  font-size:            20px;
  padding:              0 0 10px 0;
  border-bottom:        1px dotted $col-white;
  margin-bottom:        10px;
}
.sideListItem {
  padding:              0 0 5px 0;
  margin-bottom:        5px;
  border-bottom:        1px solid $col-basegrey;

}
.sideListItem-borgry {
  border-bottom:        1px solid $col-drkgrey;
}
.sideListItem-borwht {
  border-bottom:        1px solid $col-white;
}
.sideListTitle, .sideListTitle2  {
  font-size:            15px;
  font-weight:          $font-regular;
  margin-top:           5px;
  padding:              5px 0;

  a:hover {
    color:              $col-ogfbluehover;
  }
}
.sideListDate {
  color:                $col-ogfyellow;
  font-weight:          $font-light;
}
.sideListLock {
  color:                $col-ogfred;
}
.sideListTeaser {
  padding:              0 0 10px 0;
  border-bottom:        1px dotted $col-white;
  margin-bottom:        10px;
}
.sideListIntro {
  padding:              10px 0 0 0;
}
.tile-editorial {
  background-color:     $col-ogfblack;
  padding:              15px;
  //margin-bottom:        15px;
  overflow:             hidden;

  .title1, .title2, .excerpt, .authorBio {
    padding:            0;
  }
  .title1 {
    font-size:          13px;
    font-weight:        $font-bold;
    //white-space:        nowrap;
  }
  .title2 {
    font-size:          20px;
    font-weight:        $font-bold;
  }
  .excerpt {
    font-size:          12px;
  }
  .dottedspacer {
    margin-bottom:      10px;
    border-bottom:      2px dotted $col-white;
    height:             10px;
  }
  .authorImg {
    padding:            0 5px 0 0;
    margin:             0;
  }
  .authorBio {
    font-size:          10px;
  }

}
.tile-editorial-fixed {
  height:               400px;
}
.tile-editorial-txtwht {
  color:                $col-white;
  a {
    color:              $col-white;
  }
}
.tile-editorial-txtblck {
  color:                $col-ogfblack;
  a {
    color:              $col-ogfblack;
  }
  .sideListDate {
    color:              $col-red;
  }
}
.tile-textbelow {
  padding-bottom:       20px;
}
.tile-curntIssue {
  min-height:           150px;
  border-bottom:        1px dotted $col-ogfblack;

  //box-shadow:           0 1px 2px $col-boxshadow;
  margin-bottom:        20px;
  padding:              15px 0;

  a {
    color:              $col-ogfblack;
  }

  .issueThumb {
    min-height:         150px;
    padding:            0 10px 10px 0;
  }
  .pub-date, .volume, .number {
    font-weight:        $font-bold;
  }
  .pub-date {
    font-size:          20px;
    margin-bottom:      20px;
  }
  .btn {
    background-color:   $col-ogfblue;
    color:              $col-white;
  }

}
.tile-poi {
  padding:              15px;
  background-color:     $col-ogflightgrey;

  .poipic {
    padding:            0;
  }
  .poiblurb {
    color:              $col-ogfblack;
    h3 {
      font-size:        15px;
      font-weight:      $font-bold;
      margin:           0;
    }
    p {
      font-size:        12px;
    }
  }
}
.listpic {
  padding: 0;
}
#myCarousel {
  padding-bottom: 15px;

  .carousel-indicators {
    bottom:             5px;
  }

  .carousel-inner {
    height:                 400px;

    .item {
      height:               400px;
      background-size:      cover;
      background-position:  center;

      img {
        //width:              100%;
        height:             auto;
        margin:             10px 0;
      }
      .carousel-caption {
        background:         $img-back-black-50 repeat top left fixed;
        width:              100%;
        bottom:             0;
        left:               0;
        //padding-bottom:     30px;
        padding:            0 10px 30px 10px;
      }
    }
  }
}
/* ... */

